target/debug/build/eyre-ccbe884fc001de5b/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /Users/loan/Desktop/dorm-game-3/target/debug/build/eyre-ccbe884fc001de5b/out/probe.rs:2:16
  |
2 |     #![feature(backtrace)]
  |                ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
